Fix PhoenicisFilteredList issue